# labs

./: .gitignore  Cargo.toml  rustfmt.toml
src/: export.rs  item.rs  lib.rs  main.rs  rules.rs  school.rs  table.rs
src/rule_editor/: list.rs  main.rs
src/solver/: backtrack.rs  mod.rs  solution.rs
src/sources/: html.rs  json.rs
templates/: index.html
