[package]
name = "labs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
eframe = "0.31.1"
egui = { version = "0.31.1", features = ["callstack"] }
egui_flex = "0.3.0"
encoding_rs = "0.8.35"
scraper = "0.23.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3

[[bin]]
name = "rule_editor"
path = "src/rule_editor/main.rs"
